# mcwordle

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt
include/: controller.h  create_list_models.h  game.h  get_files_path.h  gui.h  gui_utility.h  sqlite_handler.h
src/: controller.c  custom_list_models.c  game.c  get_files_path.c  gui.c  gui_utility.c  main.c  sqlite_handler.c
